2011-07-07  Simson Garfinkel  <simsong@t.nitroba.org>

	* src/dig.cpp (process_dir): modified conditional compilation for WIN32

2011-07-05  Simson Garfinkel  <simsong@186.sub-75-197-238.myvzw.com>

	* src/helpers.cpp: moved setup_expert_mode to main.cpp, because it's actually helping to parse the command line.
	removed my_basename, since it is now done on strings in dig.cpp

2011-07-05  Simson Garfinkel  <simsong@it012176.ern.nps.edu>

	* Makefile.am (SUBDIRS): hashdeep subdir renamed to be src, since it is now src for everybody.

2011-07-04  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/main.cpp: added conditional to use built-in __progname if compiling under WIN32

	* hashdeep/Makefile.am (hashdeep_SOURCES): removed tchar-local.h and added wstring.h

	* hashdeep/dig.cpp (clean_name): changed mode_relative to opt_relative

2011-07-03  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/dig.cpp (should_hash_symlink): changed stat structure from _tstat_t to _tstati64

	* configure.ac: added -DWINVER=0x0500 to get Windows UTF-8 conversion. mingw targets for 0x0400 (

	* hashdeep/main.h (std::vector): file_type_t changed to hashfile_format, since that describes what it actually is.

	* hashdeep/Makefile.am (hashdeep_SOURCES): removed cycles.cpp.

	* hashdeep/dig.cpp (have_processed_dir): moved cycles.cpp into dig.cpp (because it's so much smaller now).

2011-07-01  Simson Garfinkel  <simsong@imac3.home>

	* hashdeep/display.cpp (state::md5deep_display_hash): now uses gmtime_r for threadsafety

	* hashdeep/hash.cpp (hash::hash_stdin): hash_file() and hash_stdin() are now methods.

2011-06-29  Simson Garfinkel  <simsong@Alphonse-Mucha.local>

	* hashdeep/common.h: moved sys/cdefs.h from tchar-local.h to common.h; added #ifdef

2011-06-24  Simson Garfinkel  <simsong@msimsonnet.local>

	* hashdeep/main.h: make_newline changed to print_newline(). No longer takes state. mode_zero changed to opt_zero.

2011-06-24  Simson Garfinkel  <simsong@imac3.home>
